crates/formatter/tests/snapshots/snapshots__migrations__000010_audit_logs.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table audit_logs;
drop type audit_action;
drop type resource_type;
