crates/formatter/tests/snapshots/snapshots__migrations__000011_template_description.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table templates drop column description;
