crates/formatter/tests/snapshots/snapshots__migrations__000011_template_description.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table templates add column description varchar (128) not null default '';
