crates/formatter/tests/snapshots/snapshots__migrations__000012_template_version_readme.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table template_versions rename readme to description;
