crates/formatter/tests/snapshots/snapshots__migrations__000012_template_version_readme.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table template_versions rename description to readme;
