crates/formatter/tests/snapshots/snapshots__migrations__000015_workspacebuild_deadline.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table only workspace_builds
	add column deadline timestamptz not null default timestamptz '0001-01-01 00:00:00+00:00';
