crates/formatter/tests/snapshots/snapshots__migrations__000016_api_key_lifetime.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table api_keys drop column lifetime_seconds;
