crates/formatter/tests/snapshots/snapshots__migrations__000017_drop_member_roles.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--- Remove the now implied 'member' role.
update users set rbac_roles = array_remove(rbac_roles, 'member');

--- Remove the now implied 'organization-member' role.
update organization_members
set
	roles = array_remove(roles, 'organization-member:' || organization_id::text);
